kubernetes/covid19-ingress-rs.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: covid19-stats-ingress
    namespace: covid19-namespace
    annotations:
      kubernetes.io/ingress.class: "nginx"
  spec:
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: covid19-stats-service
              port: 5000

#    - host: 168.1.226.29
#      http:
#        paths:
#        - path: /
#          pathType: Prefix
#          backend:
#            service:
#              name: covid19-stats-service
#              port: 5000
